# script-helpers

./: Cargo.toml  Makefile  README.md
src/: any_line_starts_with.rs  back_up_existing_file.rs  lib.rs  must_open_file.rs  read_lines.rs  sha256_hash_file_to_string.rs
