[package]
name = "script-helpers"
description = "Simplified helpers for Rust scripts."
license = "Unlicense"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
clap_complete = "4.5.33"
hex = "0.4.3"
sha2 = "0.10.8"
